@@ -15,6 +15,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -30,30 +31,34 @@ public class SecurityConfig {
         @Bean
         public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
                 http
-                                // CORS + CSRF
+                                // ✅ CORS + CSRF
                                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                                 .csrf(AbstractHttpConfigurer::disable)
 
-                                // Stateless API
+                                // ✅ Stateless API (no sessions)
                                 .sessionManagement(session -> session
                                                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS))
 
-                                // Authorization rules
+                                // ✅ Authorization rules
                                 .authorizeHttpRequests(auth -> auth
-                                                // Allow all OPTIONS for CORS preflight
+                                                // Allow all OPTIONS requests for CORS preflight
                                                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                                                // Public auth endpoints
+                                                // Public auth endpoints - no authentication required
                                                 .requestMatchers(
                                                                 "/api/auth/**",
+                                                                "/api/auth/register",
+                                                                "/api/auth/login",
+                                                                "/api/auth/google",
+                                                                "/api/auth/health",
                                                                 "/actuator/**",
                                                                 "/error")
                                                 .permitAll()
 
-                                                // Everything else requires auth (if/when you add JWT etc.)
+                                                // Everything else requires authentication
                                                 .anyRequest().authenticated())
 
-                                // No built-in login UI / basic auth popups
+                                // ✅ Disable default login forms
                                 .httpBasic(AbstractHttpConfigurer::disable)
                                 .formLogin(AbstractHttpConfigurer::disable);
 
@@ -64,31 +69,53 @@ public class SecurityConfig {
         public CorsConfigurationSource corsConfigurationSource() {
                 CorsConfiguration configuration = new CorsConfiguration();
 
-                // Only browser origins that should talk to this service
-                configuration.setAllowedOrigins(List.of(
-                                "http://localhost:3000", // Next.js dev
+                // ✅ Allowed origins - your frontend URLs
+                configuration.setAllowedOrigins(Arrays.asList(
+                                // Local development
+                                "http://localhost:3000",
                                 "http://127.0.0.1:3000",
-                                "http://localhost:5173", // Vite (if you use it)
+                                "http://localhost:5173", // Vite
                                 "http://127.0.0.1:5173",
-                                "http://localhost:8080", // API gateway
+                                "http://localhost:8080", // API Gateway
                                 "http://127.0.0.1:8080",
-                                "https://fintrack-liart.vercel.app" // production frontend
-                ));
 
-                configuration.setAllowedMethods(List.of(
-                                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH", "HEAD"));
+                                // Production frontend
+                                "https://fintrack-liart.vercel.app",
 
-                configuration.setAllowedHeaders(List.of("*"));
+                                // ✅ Add wildcard for Vercel preview deployments (optional)
+                                "https://fintrack-liart-*.vercel.app"));
 
-                configuration.setExposedHeaders(List.of(
+                // ✅ Allowed HTTP methods
+                configuration.setAllowedMethods(Arrays.asList(
+                                "GET",
+                                "POST",
+                                "PUT",
+                                "DELETE",
+                                "OPTIONS",
+                                "PATCH",
+                                "HEAD"));
+
+                // ✅ Allow all headers (including Authorization, Content-Type, etc.)
+                configuration.setAllowedHeaders(Arrays.asList("*"));
+
+                // ✅ Expose headers to the frontend
+                configuration.setExposedHeaders(Arrays.asList(
                                 "Authorization",
-                                "Content-Type"));
+                                "Content-Type",
+                                "Accept",
+                                "X-Requested-With",
+                                "Access-Control-Allow-Origin"));
 
+                // ✅ Allow credentials (cookies, authorization headers)
                 configuration.setAllowCredentials(true);
-                configuration.setMaxAge(3600L); // cache preflight 1 hour
 
+                // ✅ Cache preflight requests for 1 hour (3600 seconds)
+                configuration.setMaxAge(3600L);
+
+                // ✅ Apply CORS configuration to all endpoints
                 UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
                 source.registerCorsConfiguration("/**", configuration);
+
                 return source;
         }
 }
